test_programs/compile_failure/non_comptime_local_fn_call/src/main.nr
fn main() {
    comptime {
        let _a = id(3);
    }
}

fn id(x: Field) -> Field {
    x
}